fix: Remove force deploy to avoid issues with CNAME file
Signed-off-by: Chris Butler <chris.butler@redhat.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
         python-version: 3.x
     - run: pip install -r requirements.txt
     - run: sudo apt-get -y install libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
-    - run: mkdocs gh-deploy --force
+    - run: mkdocs gh-deploy
