--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,5 +15,7 @@ jobs:
       with:
         python-version: 3.x
     - run: pip install -r requirements.txt
+    - run: pre-commit install
+    - run: pre-commit run --all-files
     - run: sudo apt-get -y install libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
     - run: mkdocs build -c -s
