--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -17,5 +17,9 @@ jobs:
     - run: pip install -r requirements.txt
     - run: pre-commit install
     - run: pre-commit run --all-files
+    - name: git diff
+      if: always()
+      run: git diff
+
     - run: sudo apt-get -y install libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
     - run: mkdocs build -c -s
