--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ PyGithub>=1.55
 pre-commit
 python-semantic-release
 mkdocs
-mkdocs-material>=9.4.6
+mkdocs-material[imaging]>=9.4.6
 markdown-include
 pymdown-extensions
 mkdocs-exclude
@@ -15,7 +15,7 @@ beautifulsoup4
 ##
 mkdocs-table-reader-plugin
 mkdocs-awesome-pages-plugin
-
+mkdocs-glightbox
 # Spellchecking
 mkdocs-spellcheck[all]
 pillow
