Update website for 2025
- Update copyright date to 2025
- Add PGP keys page with navigation
- Add frontmatter to awesome_stuff.md for proper integration
- Update navigation menu to include Awesome Stuff and PGP Keys pages

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,9 +10,19 @@
   weight = 20
 
 [[main]]
+  name = "Awesome Stuff"
+  pageRef = "awesome_stuff"
+  weight = 30
+
+[[main]]
+  name = "PGP Keys"
+  pageRef = "pgp-keys"
+  weight = 40
+
+[[main]]
   name = "About"
   pageRef = "/"
-  weight = 30
+  weight = 50
 
 # Footer menu
 [[footer]]
